# Noetron-Studio

./: Cargo.toml
.aiproj_templates/cv/: pipeline.py
.aiproj_templates/dl/: pipeline.py
.aiproj_templates/ml/: data_config.toml  pipeline.py
.aiproj_templates/nlp/: pipeline.py
.github/workflows/: build-noetron.yml  run_tests.yml
crates/editor/src/: bracket_colorization.rs  editor.rs  editor_tests.rs
crates/noetron_aiproj/: Cargo.toml
crates/noetron_aiproj/src/: detector.rs  domain.rs  lib.rs  manifest.rs  scaffold.rs
crates/noetron_db/: Cargo.toml
crates/noetron_db/src/: db.rs  lib.rs  migrations.rs  queries.rs
crates/noetron_db/src/queries/: datasets.rs  models.rs  pipelines.rs  projects.rs  runs.rs
crates/noetron_executor/: Cargo.toml
crates/noetron_executor/src/: lib.rs
crates/noetron_ir/: Cargo.toml
crates/noetron_ir/src/: codegen.rs  entities.rs  lib.rs  parser.rs  sync.rs
crates/noetron_toggle/: Cargo.toml
crates/noetron_toggle/src/: lib.rs
crates/noetron_ui/: Cargo.toml
crates/noetron_ui/src/: data_panel.rs  experiment_panel.rs  lib.rs  model_panel.rs  pipeline_panel.rs
crates/vim/src/: test.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
docs/noetron/: deep-dive.md
python/noetron_runtime/: __init__.py
python/noetron_runtime/data/: __init__.py  dvc_bridge.py  ingestor.py  preprocessor.py  profiler.py  versioner.py
python/noetron_runtime/experiment/: __init__.py  auto_logger.py
python/noetron_runtime/model/: __init__.py  exporter.py  trainer.py
python/noetron_runtime/pipeline/: __init__.py  runner.py
script/: build-noetron.sh
tooling/xtask/src/tasks/workflows/: run_tests.rs
