[package]
name = "noetron_db"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
description = "Noetron Studio — local SQLite project database: schema, migrations, typed queries"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
