[package]
name = "noetron_executor"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
description = "Noetron Studio — noetron_executor"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
noetron_ir = { path = "../noetron_ir" }
noetron_db = { path = "../noetron_db" }
rusqlite = { version = "0.32", features = ["bundled"] }
