[package]
name = "noetron_toggle"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
description = "Noetron Studio — top toggle bar (no-code ↔ full-code)"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
gpui.workspace = true
ui = { path = "../ui" }
workspace = { path = "../workspace" }
noetron_ir.workspace = true
